--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </div>
                         <div>
                             <ul>
-                                <li><span>✉️ </span>@naver.com</li>
+                                <li><span>✉️ </span>insort@naver.com</li>
                                 <li style="font-size: 12px;">
                                     <i class="fab fa-github fa-2x"></i>
                                     <a href="https://github.com/hj3437" target="_black">Github : @hj3437</a>
