다크모드 추가

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="header-wrap">
                 <div class="logo-wrap">
-                    <h1>HJ</h1>
+                    <h1><a href="#">HJ</a></h1>
                 </div>
                 <nav>
                     <ul>
@@ -60,13 +60,13 @@
                         <div class="hand">👋</div>
                         <div class="profile-asforme">
                             <p>
-                                &nbsp안녕하세요. 다양한 프로그램을 만들어 보고 싶어 개발에 도전중인 권혁진입니다.
-                                문제를 해결하기위해 고민하며 책임감있게 일합니다.
+                                &nbsp안녕하세요. 개발에 도전중인 권혁진입니다. <br>다양한 프로그램을 만들어 보고 싶습니다.
+                                문제를 해결하기위해 고민하며 <br>책임감있게 일합니다.
                             </p>
                         </div>
                         <div>
                             <ul>
-                                <li><span>✉️ </span>insort@naver.com</li>
+                                <li><span>✉️ </span><span>insort@naver.com</span></li>
                                 <li style="font-size: 12px;">
                                     <i class="fab fa-github fa-2x"></i>
                                     <a href="https://github.com/hj3437" target="_black">Github : @hj3437</a>
@@ -102,6 +102,8 @@
                         <li>
                             <strong>Frontend</strong>
                             <p>HTML5, CSS3, JavaScript(ES6)</p>
+                            <strong>Backend</strong>
+                            <p></p>
                         </li>
                     </ul>
                 </div>
