프로젝트영역 디자인 변경

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
 
@@ -23,7 +24,7 @@
     <script src="https://kit.fontawesome.com/975d0b43de.js" crossorigin="anonymous"></script>
 
     <!-- Favicon -->
-    <link rel="icon" href="/img/me.png" sizes="any" type="image/png">    
+    <link rel="icon" href="/img/me.png" sizes="any" type="image/png">
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MLP8ZEGEWQ"></script>
@@ -39,6 +40,7 @@
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -97,13 +99,28 @@
                 </div>
                 <div class="content">
                     <ol>
-                        <li>
-                            <a href="https://kaswece.org"><strong>한국발도르프 영유아 교육연대</strong></a>
-                            <p>URL <a href="https://kaswece.org">https://kaswece.org</a></p>
-                            <p>2021.07.05 ~ 2021.07.30</p>
-                            <p>비영리기관 홈페이지 제작</p>
-                            <p>웹호스팅/그누보드사용</p>
-                            <p>4인 팀프로젝트, Training/소식/게시판 영역 담당</p>                            
+                        <li class="card">
+                            <a class="thumbnail" href="https://kaswece.org"><img src="img/kaswece/ic_01_thumbnail.png" alt=""></a>
+                            <span>🔗</span><a class="title" href="https://kaswece.org"> <strong>한국발도르프 영유아 교육연대</strong></a>
+                            <div class="history">
+                                <ul>
+                                    <li><p>2021.07.05 ~ 2021.07.30</p></li>
+                                    <li class="category">
+                                        <ul>
+                                            <li>WebHosting</li>
+                                            <li>그누보드</li>
+                                            <li>HTML</li>
+                                            <li>CSS</li>
+                                            <li>JS</li>
+                                            <li>PHP</li>
+                                            <li>MYSQL</li>
+                                        </ul>
+                                    </li>
+                                    <li><p>4인 팀프로젝트</p></li>
+                                    <li><p>담당 : Training / 소식 / 게시판</p></li>
+                                    <li><p>작업 : 게시판 14개</p></li>
+                                </ul>                                                                                                                                                                
+                            </div>
                         </li>
                     </ol>
                 </div>
@@ -116,9 +133,13 @@
                     <ul>
                         <li>
                             <strong>Frontend</strong>
-                            <p>HTML5, CSS3, JavaScript(ES6)</p>
+                            <p>- HTML5, CSS3, JavaScript(ES6)</p>
                             <strong>Backend</strong>
-                            <p></p>
+                            <p>-</p>
+                            <strong>DevOps</strong>
+                            <p>-</p>
+                            <strong>Collaboration</strong>
+                            <p>- MS Teams</p>
                         </li>
                     </ul>
                 </div>
@@ -132,6 +153,7 @@
                         <li>
                             <span><strong>서울시 청년 디지털 소셜임팩트 일자리 사업</strong></span>
                             <p>2021.05.03 - 2021.08.13</p>
+                            <p>비영리기관 홈페이지 제작</p>
                         </li>
                     </ol>
                 </div>
