프로젝트영역 세부설명 카드 추가

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
-    <title>권혁진 포트폴리오</title>
+    <title>권혁진 HJ</title>
 
     <!-- Material Icon -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -100,12 +100,13 @@
                 <div class="content">
                     <ol>
                         <li class="card">
-                            <a class="thumbnail" href="https://kaswece.org"><img src="img/kaswece/ic_01_thumbnail.png" alt=""></a>
-                            <span>🔗</span><a class="title" href="https://kaswece.org"> <strong>한국발도르프 영유아 교육연대</strong></a>
+                            <a class="thumbnail" href="https://kaswece.org"><img src="img/kaswece/ic_01_thumbnail.png"
+                                    alt=""></a>
+                            <span>🔗</span><a class="title" href="https://kaswece.org"> <strong>한국발도르프 영유아
+                                    교육연대</strong></a>
                             <div class="history">
                                 <ul>
-                                    <li><p>2021.07.05 ~ 2021.07.30</p></li>
-                                    <li class="category">
+                                    <li class="work-category">
                                         <ul>
                                             <li>Web Hosting</li>
                                             <li>그누보드</li>
@@ -116,11 +117,23 @@
                                             <li>MYSQL</li>
                                         </ul>
                                     </li>
-                                    <li><p>4인 팀프로젝트</p></li>
-                                    <li><p>담당 : Training / 소식 / 게시판</p></li>
-                                    <li><p>작업 : 게시판 14개</p></li>
-                                </ul>                                                                                                                                                                
+                                    <li class="work-date">
+                                        <p>일정: 2021.07.05 ~ 2021.07.30</p>
+                                    </li>
+                                    <li class="work-team">
+                                        <p>구성: 4인 팀프로젝트</p>
+                                    </li>
+                                    <li class="work-responsible-area">
+                                        <p>담당: Training / 소식 / 게시판</p>
+                                    </li>
+                                    <li class="work-contents">
+                                        <p>작업: 게시판 14개</p>
+                                    </li>
+                                </ul>
                             </div>
+                        </li>
+                        <li class="card detail">
+                            <!-- &nbsp📌                            -->
                         </li>
                     </ol>
                 </div>
@@ -162,12 +175,11 @@
     </main>
     <footer>
         <div class="container">
-            <div class="content-wrap">
-
-            </div>
+            <div class="content-wrap"></div>
         </div>
     </footer>
     <script src="js/index.js"></script>
+    <script src="js/card.js"></script>
 </body>
 
 </html>
