프로젝트 영역 텍스트 변경

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                                         <p>일정: 2021.07.05 ~ 2021.07.30</p>
                                     </li>
                                     <li class="work-team">
-                                        <p>구성: 4인 팀프로젝트</p>
+                                        <p>구성: 팀프로젝트</p>
                                     </li>
                                     <li class="work-responsible-area">
-                                        <p>담당: Training / 소식 / 게시판</p>
+                                        <p>담당: 게시판</p>
                                     </li>
                                     <li class="work-contents">
                                         <p>작업: 게시판 14개</p>
