main.js를 darkmod,js로 변경

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="content-wrap"></div>
         </div>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="js/darkmode.js"></script>
     <script src="js/card.js"></script>
 </body>
 
