--- a/index.html
+++ b/index.html
@@ -57,9 +57,18 @@
                     </ul>
                 </nav>
                 <div class="menu-wrap">
-                    <a href="#" class="dark-mode">
-                        <span class="material-icons">dark_mode</span>
-                    </a>
+                    <ul>
+                        <li>
+                            <a href="#" class="dark-mode">
+                                <span class="material-icons">dark_mode</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="menu">
+                                <span class="material-icons">menu</span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
