--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <!-- Viewport -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="HJ Portfolio">
+    <meta property="og:site_name" content="HJ Portfolio">
+    <meta property="og:url" content="https://hj3437.github.io/">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://github.com/hj3437/hj3437.github.io/blob/main/img/main.png">
 
     <!-- Title -->
     <title>권혁진 HJ</title>
@@ -141,9 +149,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="card detail">
-                            <!-- &nbsp📌                            -->
-                        </li>
+                        <li class="card detail"></li>
                     </ol>
                 </div>
             </div>
