--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://hj3437.github.io/">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://github.com/hj3437/hj3437.github.io/blob/main/img/main.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/hj3437/hj3437.github.io/main/img/main.png">
 
     <!-- Title -->
     <title>권혁진 HJ</title>
