이메일 변경

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Viewport -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- OPEN GRAPH -->
     <meta property="og:title" content="HJ Portfolio">
     <meta property="og:site_name" content="HJ Portfolio">
@@ -99,7 +99,7 @@
                         </div>
                         <div>
                             <ul>
-                                <li><span>✉️ </span><span>insort@naver.com</span></li>
+                                <li><span>✉️ </span><span>hyukjin_89@naver.com</span></li>
                                 <li style="font-size: 12px;">
                                     <i class="fab fa-github fa-2x"></i>
                                     <a href="https://github.com/hj3437" target="_black">Github : @hj3437</a>
