--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                             <strong>Frontend</strong>
                             <p>- HTML5, CSS3, JavaScript(ES6)</p>
                             <strong>Backend</strong>
-                            <p>-</p>
+                            <p>- Java, Spring MVC</p>
                             <strong>DevOps</strong>
-                            <p>-</p>
+                            <p>- MySQL</p>
                             <strong>Collaboration</strong>
                             <p>- MS Teams</p>
                         </li>
