프로젝트 작업내용 변경

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                         <p>담당: 게시판</p>
                                     </li>
                                     <li class="work-contents">
-                                        <p>작업: 게시판 14개</p>
+                                        <p>작업: 게시판 CSS 변경</p>
                                     </li>
                                 </ul>
                             </div>
