--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
                     <ul>
                         <li>
                             <strong>Frontend</strong>
-                            <p>- HTML5, CSS3, JavaScript(ES6)</p>
-                            <strong>Backend</strong>
-                            <p>- Java, Spring MVC</p>
+                            <p>- HTML5, CSS3, JavaScript(ES6), Android(Kotlin)</p>                            
                             <strong>DevOps</strong>
                             <p>- MySQL</p>
                             <strong>Collaboration</strong>
